--- a/code/config.ini
+++ b/code/config.ini
@@ -1,13 +1,14 @@
 [path]  
 # 目标图片和图库的路径配置
-TARGET_PHOTO: /User/tme/Desktop/photo/target.jpg 
-PHOTOS: /User/tme/Desktop/photo/photos  
+TARGET_PHOTO: /Users/tme/Desktop/target.jpg
+PHOTOS: /Volumes/TOSHIBA/jiejie_photo
+TARGET_SAVE_PATH: /Users/tme/Desktop 
   
 [size]  
 # 目标照片分割的张数 width最少为20张
-width: 40
+width: 60
 # hight: 30
   
 [other]  
 # 是否重复使用图片
-REPEAT: True  
+REPEAT: True
